# gttlvutil

./: .gitattributes  Changelog  GNUmakefile.am  README.md  VERSION  WinBuild.bat.sample  WinBuild.txt  WinBuild32.bat  WinBuild64.bat  configure.ac  ksi.desc  makefile  rebuild-deb.sh  rebuild-rpm.sh  rebuild-win32.bat  rebuild-win64.bat  rebuild.sh
doc/: gttlvdump.1  gttlvgrep.1  gttlvundump.1  gttlvwrap.1  tlv-desc.5  tlv.5
packaging/deb/: control.in  copyright  rebuild_changelog.sh  rules.in
packaging/redhat/: gttlvutil.spec.in
redhat/: gttlvutil.spec  gttlvutil.spec.in
src/: GNUmakefile.am  common.c  common.h  compatibility.c  compatibility.h  desc.c  desc.h  dir.c  dir.h  encoding.c  encoding.h  fast_tlv.c  fast_tlv.h  file_io.c  file_io.h  grep_tlv.c  grep_tlv.h  gt_tlv.c  gt_tlv.h  gttlvgrep  hash.c  hash.h  hmac.h  hmac_cryptoapi.c  hmac_openssl.c  json2tlv.js  ksi.desc  ksie.desc  logsig.desc  test1.json  test2.json  tlvcreate.c  tlvdump.c  tlvdump.h  tlvgrep.c  tlvundump.c  tlvwrap.c
test/: README  README.md  TEST-README.md  convert-to-memory-test.sh  echo.sh  memory-test.sh  test.sh
test/resources/desc/: test.desc
test/resources/desc/duplicate_in_file/: ksi.desc
test/resources/desc/modified_orig/: 800.desc
test/resources/hmac/: extend_request-hmac_is_last-hmac_func_v2.txt  extend_request-hmac_is_last-indent_level_2-hmac_func_v2.txt  extend_request-hmac_is_not_last-hmac_func_v1.txt  extend_request-hmac_is_not_last-hmac_func_v2.txt  extend_response-hmac_func_v1.txt  extend_response-hmac_func_v2.txt  extend_response-multiple-hmac_func-mixed_ver.txt  extend_response-no_hmac.txt
test/resources/pub/: ksi-publications.txt
test/resources/sig/: ok-sig-2014-08-01.1.b16  ok-sig-2014-08-01.1.b64  ok-sig-2014-08-01.1.ksig.txt
test/resources/tlv/: V2ExtendResponse-oldHmac.tlv  aggr-request-v2.tlv  aggr-response-v2.tlv  dummy-half_byte.txt  dummy-one_and_a_half_byte.txt  dummy.txt  dummy_and_known_pdu.txt  ext-request-v2.tlv  ext-response-v2.tlv  large_file.tlv  nok-nested-tlv-with-data-plus-nested-elements.txt  test2-extend_response-1.txt  test2-extend_response-multiple.txt  test2-extend_response-reqId_1-hmac_v2.tlv  test2-extend_response-reqId_1.tlv  test2-extend_response-reqId_2.txt
test/test_suites/: dump.test  dump_user_desc.test  grep.test  integration.test  undump.test  undump_hmac.test  wrap.test
windows/: gttlvdump.wxs  gttlvutil.wxs  license.rtf
